--- a/public/sass/pages/_print.scss
+++ b/public/sass/pages/_print.scss
@@ -748,7 +748,7 @@ input.switch:checked ~ label:after {
         font-size: 20px;
         position: absolute;
         transition: all .1s ease;
-        width: 280px;
+        width: 260px;
         z-index: 1;
 
         .accordion-body {
@@ -785,7 +785,7 @@ input.switch:checked ~ label:after {
             display: block;
             margin: 0 0 3px 0;
             padding: 0 20px;
-            width: 230px;
+            width: 260px;
         }
 
         .control {
